# backend

./: .gitmessage.txt  README.md  deploy.sh  pyproject.toml
.github/workflows/: Blue-CD.yml  CI.yml  Green-CD.yml
account/: manager.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
account/migrations/: 0001_initial.py
config/: root_urls.py  settings.py
config/common/: decorator.py  exceptions.py  pagination.py  permissions.py  utils.py
docker/: Dockerfile  docker-compose.yml
docker/nginx/: default.conf
post/: models.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py
